Make custom Runtime for dist